--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
   <div class="container">
-    <span>Angular Contact List | 2017</span>
+    <span>Lista de Contatos | 2017 | by Danielle Gomes</span>
   </div>
 </footer>
