--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning clearfix" role="alert">
-  <h4 class="alert-heading">Sobre...</h4>
+  <h4 class="alert-heading">Sobre</h4>
   <hr>
   <p>
     Lista de Contatos Criada por Danielle Gomes.
