--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-navbar></app-navbar>
+<router-outlet></router-outlet>
 
-<div class="container">
-
-</div>
-
+<div class="container"></div>
 <app-footer></app-footer>
