--- a/src/app/contatos/contato/contato.component.html
+++ b/src/app/contatos/contato/contato.component.html
@@ -1,5 +1,6 @@
-
+<div>
 <strong>Nome:</strong> {{contato.nome}} <br />
 <strong>Telefone:</strong> {{contato.fone}}<br />
 <button (click)="remove()">Remove</button>
 <br /><br />
+</div>
