--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,10 +7,11 @@
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav mr-auto mt-2 mt-sm-0">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Contatos</a>
+        <a class="nav-link" routerLink="/Contatos">Contatos</a>
       </li>
+
       <li class="nav-item">
-        <a class="nav-link" href="#">Sobre</a>
+        <a class="nav-link" routerLink="/Sobre"> Sobre</a>
       </li>
     </ul>
   </div>
