--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,8 +1,8 @@
 <div class="alert alert-warning clearfix" role="alert">
-  <h4 class="alert-heading">Sobre</h4>
+  <h4 class="alert-heading">Sobre a lista</h4>
   <hr>
   <p>
-    Lista de Contatos Criada por Danielle Gomes.
+    Lista criada por Danielle Gomes.
   </p>
   <hr>
   <p>
@@ -14,6 +14,6 @@
   <a href="https://www.linkedin.com/in/danielle-gomes-2980989a/" target="_blank">Sobre Danielle</a>
   <hr>
   <p class="float-right">
-    Licenca CESAR
+    Licença CESAR
   </p>
 </div>
