--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -1,4 +1,4 @@
-<div class="alert alert-warning clearfix" role="alert">
+<div class="jumbotron jumbotron-fluid" role="alert">
   <h4 class="alert-heading">Sobre a lista</h4>
   <hr>
   <p>
