--- a/src/app/contatos/contato/contato.component.html
+++ b/src/app/contatos/contato/contato.component.html
@@ -1,6 +1,16 @@
-<div>
-<strong>Nome:</strong> {{contato.nome}} <br />
-<strong>Telefone:</strong> {{contato.fone}}<br />
-<button (click)="remove()">Remove</button>
+<div class="alert alert-dark" role="alert">
+
+
+<span class="badge badge-pill badge-light" >
+  <strong>Nome:</strong> {{contato.nome}} <br />
+</span>
+<br /><br />
+<span class="badge badge-pill badge-light" >
+  <strong>Telefone:</strong> {{contato.telefone}}<br />
+</span>
+<br /><br />
+<button (click)="remove()" class="btn btn-lg btn-secondary btn-sm">Remove</button>
+
+
 <br /><br />
 </div>
