--- a/src/app/contatos/contato/contato.component.html
+++ b/src/app/contatos/contato/contato.component.html
@@ -2,11 +2,11 @@
 
 
 <span class="badge badge-pill badge-light" >
-  <strong>Nome:</strong> {{contato.nome}} <br />
+  <strong>Name:</strong> {{contato.name}} <br />
 </span>
 <br /><br />
 <span class="badge badge-pill badge-light" >
-  <strong>Telefone:</strong> {{contato.telefone}}<br />
+  <strong>Phone:</strong> {{contato.phone}}<br />
 </span>
 <br /><br />
 <button (click)="remove()" class="btn btn-lg btn-secondary btn-sm">Remove</button>
