--- a/src/app/contatos/contatos.component.html
+++ b/src/app/contatos/contatos.component.html
@@ -6,17 +6,17 @@
 </div>
 
 <div *ngIf="carregando">
-  carregando.......
+  carregando ***
 </div>
 
 <br /><br />
 
 <div class="alert alert-danger" role="alert">
   <span class="badge badge-pill badge-light">
-    Nome:
+    Name:
     <input
       type="text"
-      [(ngModel)]="inputNome" /> <br />
+      [(ngModel)]="inputName" /> <br />
   </span>
 
 <br />
@@ -24,10 +24,10 @@
 
   <span class="badge badge-pill badge-light">
 
-  Telefone:
+  Phone:
     <input
       type="text"
-      [(ngModel)]="inputFone" /> <br />
+      [(ngModel)]="inputPhone" /> <br />
   </span>
 
 <br />
