--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
 
-<div class="container"></div>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
+
 <app-footer></app-footer>
